Aws/cloudformation/stacks/security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Stack de rede com Security Groups

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
  APIContainerPort:
    Type: Number
  ChatbotContainerPort:
    Type: Number

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group para o ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
  
  ChatbotSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group para Chatbot
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ChatbotContainerPort
          ToPort: !Ref ChatbotContainerPort
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  APISecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group para API
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref APIContainerPort
          ToPort: !Ref APIContainerPort
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref APIContainerPort
          ToPort: !Ref APIContainerPort
          SourceSecurityGroupId: !Ref ChatbotSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
  
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group para DB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref APISecurityGroup
Outputs:
  ALBSecurityGroup:
    Value: !Ref ALBSecurityGroup
  APISecurityGroup:
    Value: !Ref APISecurityGroup
  DBSecurityGroup:
    Value: !Ref DBSecurityGroup
  ChatbotSecurityGroup:
    Value: !Ref ChatbotSecurityGroup
